export enum ApplicationStatus {
  DRAFT = 'draft',
  APPLIED = 'applied',
  INTERVIEWING = 'interviewing',
  OFFERED = 'offered',
  REJECTED = 'rejected',
  WITHDRAWN = 'withdrawn',
  ACCEPTED = 'accepted'
}
