export enum BusinessType {
  B2B = 'b2b',
  B2C = 'b2c',
  B2B2C = 'b2b2c',
  B2G = 'b2g',
  D2C = 'd2c',
  MARKETPLACE = 'marketplace',
  PLATFORM = 'platform'
}
