export enum CompanyStage {
  SEED = 'seed',
  SERIES_A = 'series_a',
  SERIES_B = 'series_b',
  SERIES_C = 'series_c',
  SERIES_D_PLUS = 'series_d_plus',
  GROWTH = 'growth',
  PUBLIC = 'public',
  BOOTSTRAPPED = 'bootstrapped',
  ACQUIRED = 'acquired'
}
