export enum Industry {
  AUTOMOBILE = 'automobile',
  SECURITY = 'security',
  FINANCE = 'finance',
  HEALTHCARE = 'healthcare',
  EDUCATION = 'education',
  E_COMMERCE = 'e_commerce',
  REAL_ESTATE = 'real_estate',
  MEDIA = 'media',
  LOGISTICS = 'logistics',
  ENERGY = 'energy',
  AGRICULTURE = 'agriculture',
  TRAVEL = 'travel',
  FOOD = 'food',
  LEGAL = 'legal',
  HR = 'hr',
  MARKETING = 'marketing',
  SAAS = 'saas',
  AI_ML = 'ai_ml',
  GAMING = 'gaming',
  TELECOM = 'telecom',
  INSURANCE = 'insurance',
  RETAIL = 'retail',
  CONSTRUCTION = 'construction',
  GOVERNMENT = 'government'
}
