export enum JobLevel {
  INTERNSHIP = 'internship',
  ENTRY_LEVEL = 'entry_level',
  ASSOCIATE = 'associate',
  MID_SENIOR = 'mid_senior',
  DIRECTOR = 'director',
  EXECUTIVE = 'executive'
}
