export enum JobSource {
  LINKEDIN = 'linkedin',
  PARAFORM = 'paraform',
  GREENHOUSE = 'greenhouse',
  UPLOAD = 'upload'
}
